--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 [dependencies]
 hostname = "0.3"
 csv = "1.1"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
